OCTOPUS-397: Create project logic is modified
Signed-off-by: root <root@ratan1.fyre.ibm.com>

--- a/ansible/post/templates/rmc-ns.yml.j2
+++ b/ansible/post/templates/rmc-ns.yml.j2
@@ -8,10 +8,10 @@ metadata:
     workload.openshift.io/allowed: management
   labels:
     kubernetes.io/metadata.name: openshift-powervm-rmc
-    name: openshift-powervm-rmc
+    name: "{{ rmc_name }}"
     openshift.io/run-level: ""
     pod-security.kubernetes.io/audit: privileged
     pod-security.kubernetes.io/enforce: privileged
     pod-security.kubernetes.io/warn: privileged
     security.openshift.io/scc.podSecurityLabelSync: "false"
-  name: openshift-powervm-rmc
+  name: "{{ project_name }}"
